Fixed button size on mobile

--- a/less/creative.less
+++ b/less/creative.less
@@ -1112,6 +1112,9 @@ input[type="checkbox"]:checked + label:before {
             border-color: @theme-primary;
             color: @theme-primary;
         }
+        @media (max-width: 500px) {
+            padding: 10px 3px;
+        }
     }
 }
 
